# chatbot-sdd

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  skills-lock.json
.opencode/: config.yaml  mcp.json  models.yaml
.opencode/skills/generate-mocks/: SKILL.md  generate-mocks.sh
.opencode/skills/generate-pydantic/: SKILL.md  generate-pydantic.sh
.opencode/skills/generate-types/: SKILL.md  generate-types.sh
.opencode/skills/run-evaluation/: SKILL.md  (+1 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: chat.py  feedback.py  sessions.py  system.py
backend/app/core/: auth.py  config.py  database.py  logging.py  security.py
backend/app/models/: generated.py
backend/app/repositories/: message_repo.py  session_repo.py
backend/app/services/: chat_service.py  session_service.py
backend/app/utils/: sse.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
backend/models/: __init__.py  api_types.ts  generated.py
backend/tests/: conftest.py  test_chat.py
docs/: environment-variables.md
frontend/: .dockerignore  .env.development  .env.production  .gitignore  .npmrc  Dockerfile  Dockerfile.prod  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
nginx/: nginx.prod.conf
specs/: CONSTITUTION.md  CONSTITUTION.md.template  openapi.yaml
specs/navigation-sessions/: README.md
specs/postgres-persistence/: README.md
(+45 files in other folders)
