[project]
name = "chatbot-sdd-backend"
version = "0.1.0"
description = "Backend for chatbot-sdd"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "databricks-sdk>=0.34.0",
    "databricks-vectorsearch>=0.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sse-starlette>=2.1.3",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "structlog>=24.4.0",
]

[tool.sdd.scripts]
generate-models = "bash .opencode/skills/generate-pydantic/generate-pydantic.sh"
validate = "bash .opencode/skills/validate-contract/validate-contract.sh"